<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/btnTemp1"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/open_dagen" />
        <item
            android:id="@+id/studies"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/studies" />
        <item
            android:id="@+id/btnOpendagen"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/btnOverHR"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/over_hr" />

    </group>
</menu>
